--- a/AntiCovidSupport/CovidSupport/nbproject/project.properties
+++ b/AntiCovidSupport/CovidSupport/nbproject/project.properties
@@ -42,7 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=pfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
