--- a/AntiCovidSupport/CovidSupport/web/WEB-INF/web.xml
+++ b/AntiCovidSupport/CovidSupport/web/WEB-INF/web.xml
@@ -16,9 +16,13 @@
         <servlet-name>BoardNewDetailController</servlet-name>
         <servlet-class>controller.BoardNewDetailController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UpdateProfileController</servlet-name>
+        <servlet-class>controller.UpdateProfileController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
-        <url-pattern>/LoginController</url-pattern>
+      <url-pattern>/view/client/news-list</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
@@ -30,8 +34,10 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>BoardNewDetailController</servlet-name>
-        <url-pattern>/BoardNewDetailController</url-pattern>
+        <url-pattern>/view/client/news-list-detail</url-pattern>
     </servlet-mapping>
+   
+   
     <session-config>
         <session-timeout>
             30
