--- a/AntiCovidSupport/CovidSupport/web/WEB-INF/web.xml
+++ b/AntiCovidSupport/CovidSupport/web/WEB-INF/web.xml
@@ -13,16 +13,28 @@
         <servlet-class>controller.BoardNewDetailController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>UpdateProfileController</servlet-name>
-        <servlet-class>controller.UpdateProfileController</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>LoginController</servlet-name>
         <servlet-class>controller.LoginController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ManagerAccountController</servlet-name>
         <servlet-class>controller.ManagerAccountController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateProfileController</servlet-name>
+        <servlet-class>controller.UpdateProfileController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteController</servlet-name>
+        <servlet-class>controller.DeleteController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>EditController</servlet-name>
+        <servlet-class>controller.EditController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ViewEditController</servlet-name>
+        <servlet-class>controller.ViewEditController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
@@ -47,6 +59,22 @@
     <servlet-mapping>
         <servlet-name>ManagerAccountController</servlet-name>
         <url-pattern>/ManagerAccountController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateProfileController</servlet-name>
+        <url-pattern>/UpdateProfileController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteController</servlet-name>
+        <url-pattern>/DeleteController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>EditController</servlet-name>
+        <url-pattern>/EditController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewEditController</servlet-name>
+        <url-pattern>/ViewEditController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
