--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /AntiCovidSupport/CovidSupport/nbproject/private/
 /AntiCovidSupport/CovidSupport/build/
 /AntiCovidSupport/CovidSupport/dist/
+/AntiCovidSupport/mavenproject2/target/
