--- a/AntiCovidSupport/CovidSupport/web/WEB-INF/web.xml
+++ b/AntiCovidSupport/CovidSupport/web/WEB-INF/web.xml
@@ -60,6 +60,26 @@
         <servlet-name>EditNewsController</servlet-name>
         <servlet-class>controller.EditNewsController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>addNewsController</servlet-name>
+        <servlet-class>controller.addNewsController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteNewsController</servlet-name>
+        <servlet-class>controller.DeleteNewsController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MainController</servlet-name>
+        <servlet-class>controller.MainController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ChatController</servlet-name>
+        <servlet-class>controller.ChatController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LoginGoogleController</servlet-name>
+        <servlet-class>controller.LoginGoogleController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/view/client/news-list</url-pattern>
@@ -123,6 +143,26 @@
     <servlet-mapping>
         <servlet-name>EditNewsController</servlet-name>
         <url-pattern>/EditNewsController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>addNewsController</servlet-name>
+        <url-pattern>/addNewsController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteNewsController</servlet-name>
+        <url-pattern>/DeleteNewsController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MainController</servlet-name>
+        <url-pattern>/MainController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ChatController</servlet-name>
+        <url-pattern>/ChatController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginGoogleController</servlet-name>
+        <url-pattern>/login-google</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
