--- a/AntiCovidSupport/CovidSupport/nbproject/project.properties
+++ b/AntiCovidSupport/CovidSupport/nbproject/project.properties
@@ -43,8 +43,7 @@ j2ee.server.type=pfv5ee8
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
-    ${libs.jstl.classpath}:\
-    ${libs.javaee-web-api-8.0.classpath}
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
